# community-platformer

./: LICENSE  README.md  setup.cfg  setup.py
community_platformer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
platformer/: __main__.py  constants.py  version.py
platformer/entities/: __init__.py  enemy.py  entity.py  player.py  robot.py  zombie.py
platformer/views/: __init__.py  view.py  view_character_select.py  view_game.py  view_game_over.py  view_main_menu.py  view_pause.py  view_settings.py
